--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,6 +8,14 @@
   <%= @article.text %>
 </div>
 
+<h2>Add a comment</h2>
+
+<%= render 'comments/form' %>
+
+<h2>Comments</h2>
+
+<%= render @article.comments %>
+
 <hr>
 
 <%= link_to 'Edit', edit_article_path(@article) %>
