--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,15 +1,4 @@
 <h1>Article list</h1>
 <%= link_to 'New Article', new_article_path %>
 <hr>
-<% @articles.each do |article| %>
-  <div>
-    <h3><%= article.title %></h3>
-    <p><%= article.text %></p>
-    <%= link_to 'Show', article_path(article) %>
-    <%= link_to 'Edit', edit_article_path(article) %>
-    <%= link_to 'Delete', article_path(article),
-                          method: :delete,
-                          data: { confirm: 'Are you sure?' } %>
-  </div>
-  <hr>
-<% end %>
+<%= render @articles %>
